syntax = "proto3";
package content.v1;
option go_package = "github.com/AdrianJanczenia/adrianjanczenia.dev_content-service/api/proto/v1;contentv1";

message GetContentRequest {
  string lang = 1;
}

message GetContentResponse {
  bytes json_content = 1;
}

service ContentService {
  rpc Handle(GetContentRequest) returns (GetContentResponse);
}